# Manalogue

./: Cargo.toml  LICENSE  README.md  index.html  man-pages-names.txt
src/: constants.rs  crawl.rs  doc.rs  index.rs  io_util.rs  lib.rs  search.rs  text.rs
