[package]
name = "man_search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index"
path = "src/bin/index.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[dependencies]
axum = "0.8.8"
memmap2 = "0.9.10"
rust-stemmers = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
